doc/2.4/_sources/reference/generated/ak.covar.rst.txt
ak.covar
--------

.. py:module: ak.covar

Defined in `awkward.operations.ak_covar <https://github.com/scikit-hep/awkward-1.0/blob/bc11dd632e68aac9d4b5ace9dfb8c2ae81e1c29a/src/awkward/operations/ak_covar.py>`__ on `line 14 <https://github.com/scikit-hep/awkward-1.0/blob/bc11dd632e68aac9d4b5ace9dfb8c2ae81e1c29a/src/awkward/operations/ak_covar.py#L14>`__.

.. py:function:: ak.covar(x, y, weight=None, axis=None, *, keepdims=False, mask_identity=False, highlevel=True, behavior=None)


    :param x: One coordinate to use in the covariance calculation (anything :py:obj:`ak.to_layout` recognizes).
    :param y: The other coordinate to use in the covariance calculation (anything :py:obj:`ak.to_layout` recognizes).
    :param weight: Data that can be broadcasted to ``x`` and ``y`` to give each point
               a weight. Weighting points equally is the same as no weights;
               weighting some points higher increases the significance of those
               points. Weights can be zero or negative.
    :param axis: If None, combine all values from the array into
             a single scalar result; if an int, group by that axis: ``0`` is the
             outermost, ``1`` is the first level of nested lists, etc., and
             negative ``axis`` counts from the innermost: ``-1`` is the innermost,
             ``-2`` is the next level up, etc.
    :type axis: None or int
    :param keepdims: If False, this function decreases the number of
                 dimensions by 1; if True, the output values are wrapped in a new
                 length-1 dimension so that the result of this operation may be
                 broadcasted with the original array.
    :type keepdims: bool
    :param mask_identity: If True, the application of this function on
                      empty lists results in None (an option type); otherwise, the
                      calculation is followed through with the reducers' identities,
                      usually resulting in floating-point ``nan``.
    :type mask_identity: bool
    :param highlevel: If True, return an :py:obj:`ak.Array`; otherwise, return
                  a low-level :py:obj:`ak.contents.Content` subclass.
    :type highlevel: bool
    :param behavior: Custom :py:obj:`ak.behavior` for the output array, if
                 high-level.
    :type behavior: None or dict

Computes the covariance of ``x`` and ``y`` (many types supported, including
all Awkward Arrays and Records, must be broadcastable to each other).
The grouping is performed the same way as for reducers, though this
operation is not a reducer and has no identity.

This function has no NumPy equivalent.

Passing all arguments to the reducers, the covariance is calculated as

.. code-block:: python


    ak.sum((x - ak.mean(x))*(y - ak.mean(y))*weight) / ak.sum(weight)

See :py:obj:`ak.sum` for a complete description of handling nested lists and
missing values (None) in reducers, and :py:obj:`ak.mean` for an example with another
non-reducer.

